# live_calc

./: .dockerignore  .gitignore  API_ISSUE_SOLUTION.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  README.md  analyze_issue.py  check_database.py  check_recipe_264.py  check_routes.py  check_users.py  comprehensive_test.py  debug_egg_price.js  docker-compose.split.yml  docker-compose.yml  get_token_and_test.py  nginx.conf  plan.md  query_extra.py  query_results.txt  test_api_routes.py  test_bcrypt_fix.py  test_cost_issue.py  test_ingredient_details.py  test_locations_api.py  test_recipe_264_oil_issue.py  todo.md  update_user_admin.py  validate_fix.js
backend/: .env.example  .gitignore  CLAUDE.md  README.md  _batch_insert_wpu.py  _debug_query.py  _temp_query.py  add_audit_fields.sql  add_remaining_updated_at.sql  add_updated_at_fields.py  add_updated_at_individual.py  alembic.ini  check_db_tables.py  clean_and_reimport.py  create_tables.py  debug_cost.py  debug_egg_price.py  generate_data.py  init_app.py  init_audit_fields.py  init_audit_fields_final.py  init_ingredient_data.py  init_units.py  initialize_density_data.py  migrate_aliases_to_name_variants.py  migrate_audit_fields.py  migrate_name_variants_to_aliases.py  migrate_name_variants_to_aliases.sql  migrate_name_variants_to_aliases_mysql.sql  migrate_name_variants_to_aliases_postgres.sql  migrate_old_records_to_utc.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_alias_search.py  test_api_response.py  test_api_server.py  test_api_sorting_behavior.py  test_bread.py  test_fastapi_server.py  (+25 more)
backend/alembic/: env.py
backend/alembic/sql/: add_is_open_to_merchants.sql  add_source_to_entity_unit_overrides.sql  migrate_all_default_units_to_jin.sql  migrate_default_unit_g_to_jin.sql  unit_management.sql
backend/alembic/versions/: 1a2b3c4d5e6f_add_is_imported_to_ingredients.py  20260304_add_recipe_images_fields.py  20260305_1843_9bb38325c149_add_product_table.py  20260305_1852_b7d181ecbf94_initial_database_schema.py  20260305_1855_2210ea9e9907_fix_优化用户食材偏好模型的索引和约束.py  20260305_1857_b5b7972ffad9_add_result_ingredient_id_to_recipes.py  20260305_1904_32de12f1b4d9_recipe_让_recipe_继承_auditmixin.py  20260305_1920_b60666838e2d_refactor_product_ingredient_links.py  20260305_1923_6ac4335a4eb0_fix_为_productingredientlink_添加完整的审计字段_.mysql.sql  20260305_1923_6ac4335a4eb0_fix_为_productingredientlink_添加完整的审计字段_.postgresql.sql  20260305_1923_6ac4335a4eb0_fix_为_productingredientlink_添加完整的审计字段_.py  20260305_1923_6ac4335a4eb0_fix_为_productingredientlink_添加完整的审计字段_.sql  20260305_1927_c2c83a3a2304_initial_database_schema_with_all_models.py  20260305_2000_make_product_id_not_null.mysql.sql  20260305_2000_make_product_id_not_null.postgis.sql  (+47 more)
backend/app/: __init__.py  config.py  main.py
backend/backend/: none_handling_fix_log.md
backend/scripts/: add_serving_weight.sql  desensitize_demo_db.py  do_migrate.py  generate_migration_sql.py  list_ingredients.py  migrate_default_unit_g_to_jin.py  migrate_energy_keys.py  migrate_from_bak.py  migrate_local_to_s3.py  migrate_s3_to_local.py  migration_data.sql  migration_mapping.json  seed_allergen_groups.py  tmp_piece_weight_updates.py
backend/spikes/: agent_cli_probe.py  events_first.jsonl  events_resume.jsonl  fake_db_mcp.py  last_session.txt  mcp_config.json
backend/tests/: conftest.py  test_account_update.py  test_auth.py  test_entity_e2e_lifecycle.py  test_entity_executors.py  test_entity_unit_density_proposals.py  test_export.py  test_image_scan.py  test_image_tracking_model.py  test_import_api.py  test_ingredient_merchant_weighted.py  test_ingredient_merge_proposals.py  test_ingredient_product_weights.py  test_locations.py  test_map_enabled_admin.py  test_map_enabled_public.py  test_merchant_merge_proposals.py  test_nutrition.py  test_permissions_p0.py  test_places_map_disabled.py  test_product_ingredient_e2e.py  test_product_ingredient_proposals.py  test_products.py  test_proposals_framework.py  test_proposals_scope.py  test_recipe_edit_proposals.py  test_recipe_publish_private.py  test_recipes.py  test_regions.py  test_reports.py  test_shared_data.py  test_storage_file_size.py  test_usda_admin_api.py  test_usda_api.py  test_usda_match_proposals.py  test_user_unit_preferences.py
backend/tmp/: check_units.py
(+978 files in other folders)
