[tool.poetry]
name = "live-calc"
version = "0.1.0"
description = "生计 - 生活成本计算器"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
apscheduler = "^3.10.4"
celery = {extras = ["redis"], version = "^5.3.6", optional = true}
redis = {extras = ["hiredis"], version = "^5.0.1", optional = true}
# Agent 维护任务台（Task 2）：受控只读数据库 MCP。
# mcp 1.28.x 会拉入 starlette>=1.0 / uvicorn>=0.40 / httpx>=0.28，而：
#   - starlette 1.x 移除 `on_startup` 形参 → 破坏 FastAPI 0.109.x（Router.__init__ 报错）
#   - httpx 0.28 移除 TestClient 用的 `app` 形参 → 破坏 starlette 0.36.x 的 TestClient
# 故显式锁回 starlette<0.37 与 httpx<0.28 以兼容现有 FastAPI/Starlette。
# mcp 本身对 httpx/starlette 无严格上界要求（unpinned），0.27.x/0.36.x 可正常运行。
mcp = "^1.28"
starlette = ">=0.35,<0.37"
httpx = ">=0.26,<0.28"
# Langchain Agent 集成（OpenAI/Anthropic）。1.x 是当前稳定大版本。
# 实测 resolver 解到：langchain 1.3.10 / langchain-openai 1.3.2 / langchain-anthropic 1.4.6。
# 会顺带拉入 openai>=2 / anthropic>=0.1，与本仓库其它 AI 客户端共用。
langchain = ">=1.0,<2"
langchain-openai = ">=1.0,<2"
langchain-anthropic = ">=1.0,<2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
