[tool.poetry]
name = "live-calc"
version = "0.1.0"
description = "生计 - 生活成本计算器"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.138.0"
	uvicorn = {extras = ["standard"], version = ">=0.31,<0.34"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
apscheduler = "^3.10.4"
requests = "^2.31.0"
celery = {extras = ["redis"], version = "^5.3.6", optional = true}
redis = {extras = ["hiredis"], version = "^5.0.1", optional = true}
	# Agent 维护任务台。mcp 在 Python >=3.14 下要求 starlette>=0.48。
	# FastAPI 0.138+ 已兼容 starlette 1.x，故不再手动锁 starlette 上界。
	mcp = "^1.28"
	httpx = ">=0.26,<0.29"
	# Langchain Agent 集成（OpenAI/Anthropic）。1.x 是当前稳定大版本。
	# 实测 resolver 解到：langchain 1.3.10 / langchain-openai 1.3.2 / langchain-anthropic 1.4.6。
	# 会顺带拉入 openai>=2 / anthropic>=0.1，与本仓库其它 AI 客户端共用。
	langchain = ">=1.0,<2"
	langchain-openai = ">=1.0,<2"
	langchain-anthropic = ">=1.0,<2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
